welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: reassignment to val
	setCouleurBrosse = c;
                         ^